--- a/mixins/_pulse-animation.scss
+++ b/mixins/_pulse-animation.scss
@@ -1,10 +1,11 @@
 //  ---------------------------------------------------------
 //  mixin for a pulse animation
 //
-//  use:  @include pulse-animation();
+//  example:
+//  use:  @include pulse-animation("0.5","1.1");
 //
 //  example in html:
-//  i used to pulse a bubble on hover
+//  i use hover on a class to pulse a link or background
 //
 //  .my-class-to-pulse:hover {
 //    display: block;
@@ -15,22 +16,18 @@
 //
 //  ---------------------------------------------------------
 
-@mixin pulse-animation() {
+@mixin pulse-animation($min,$max) {
   @keyframes pulse {
-    0% {transform: scale(0.6, 0.6); opacity: 0.0;}
-    50% {transform: scale(1.1, 1.1); opacity: 1.0;}
+    @content;
+    0% {transform: scale(#{$min}, #{$min}); opacity: 0.0;}
+    50% {transform: scale(#{$max}, #{$max}); opacity: 1.0;}
     100% {transform: scale(1.0, 1.0); opacity: 1.0;}
   }
 
   @-webkit-keyframes pulse {
-    0% {-webkit-transform: scale(0.6, 0.6); opacity: 0.0;}
-    50% {-webkit-transform: scale(1.1, 1.1); opacity: 1.0;}
+    @content;
+    0% {-webkit-transform: scale(#{$min}, #{$min}); opacity: 0.0;}
+    50% {-webkit-transform: scale(#{$max}, #{$max}); opacity: 1.0;}
     100% {-webkit-transform: scale(1.0, 1.0); opacity: 1.0;}
-  }
-
-  @-moz-keyframes pulse {
-    0% {-moz-transform: scale(0.6, 0.6); opacity: 0.0;}
-    50% {-moz-transform: scale(1.1, 1.1); opacity: 1.0;}
-    100% {-moz-transform: scale(1.0, 1.0); opacity: 1.0;}
   }
 }
